--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                     ???????? ????????? ? ?????, ? ??????? ? ??? ?????? 101% ????. ??
                     ?????, ?? ????? ????? ??????????. ?? ?????? (? ? ??????????? ? ??
                     4-7 ?????) ????? ??????? ?? ?????? ???????, ? ??????? ??????. ? ???
-                    ?????? ??????, ??????? ?????????, ?????? ???? – ???, ??? ??
+                    ?????? ??????, ??????? ?????????, ?????? ???? ï¿½ ???, ??? ??
                     ????????? ?????????. ????? ????????? ??????? ?? ????????????. ???
                     ?????? ???????? ?????????? ?????, ??? ???????? ???????? ?? ?????
-                    ?????????. ??????? – ?? ?? ?????? ???????, ? ??????? ??????, ???
-                    ???????? ?????. ???? ??????, ???????? ? ????? ????? – must-have, ???
+                    ?????????. ??????? ï¿½ ?? ?? ?????? ???????, ? ??????? ??????, ???
+                    ???????? ?????. ???? ??????, ???????? ? ????? ????? ï¿½ must-have, ???
                     ???????? ???? ?????????.
                 </p>
                 <p class="about-text about-text-mobile">
@@ -237,7 +237,7 @@
                     ???????? ????????? ? ?????, ? ??????? ? ??? ?????? 101% ????. ??
                     ?????, ?? ????? ????? ??????????. ?? ?????? (? ? ??????????? ? ??
                     4-7 ?????) ????? ??????? ?? ?????? ???????, ? ??????? ??????. ? ???
-                    ?????? ??????, ??????? ?????????, ?????? ???? – ???, ??? ??
+                    ?????? ??????, ??????? ?????????, ?????? ???? ï¿½ ???, ??? ??
                     ????????? ?????????. ????? ????????? ??????? ?? ????????????. ???
                     ?????? ???????? ?????????? ?????, ??? ???????? ???????? ?? ?????
                     ?????????.
@@ -311,7 +311,7 @@
                class="gallery-link"
                target="_blank"
                rel="noopener noreferrer">
-                More photos in Instagram
+                More photos inï¿½Instagram
                 <svg class="gallery-icon">
                     <use href="#instagram"></use>
                 </svg>
@@ -350,7 +350,7 @@
         <div class="price-container">
             <h2 class="price-title">??????? ?? ????</h2>
             <p class="price-description">
-                ??????????? ??????, ??????? ??????? ?? ???????? ?????????? – ???, ???
+                ??????????? ??????, ??????? ??????? ?? ???????? ?????????? ï¿½ ???, ???
                 ??????????? ???? ????????????. ??????? ???????, ??? ?????????? ?????
                 ????????
             </p>
@@ -524,11 +524,11 @@
 
                     <h2 class="news-card-title">???????? ?????</h2>
                     <p class="news-card-description">
-                        9 ??????? ? 18:00 ? ????????? «?????????» ??????????? ????????
-                        ???????? ?????. ?? ???????????? – ??????????? ???? ?????.
+                        9 ??????? ? 18:00 ? ????????? ï¿½?????????ï¿½ ??????????? ????????
+                        ???????? ?????. ?? ???????????? ï¿½ ??????????? ???? ?????.
                         ????????? ???????????? ????? ??????? ?? ???????? ??????????!
                     </p>
-                    <button type="button" class="news-button">??????????»</button>
+                    <button type="button" class="news-button">??????????ï¿½</button>
                     <div class="card-line"></div>
                     <p class="date">8 ??????? 2025</p>
                 </div>
@@ -538,11 +538,11 @@
                     <h2 class="news-card-title">???? ????????? ? ?????????</h2>
                     <p class="news-card-description">
                         ?????????? ??? 14 ?????? ?? ??????????? ??? ????????? ? ?????????
-                        «?????????»! ?? ??? ??????? ?????? ????, ??????? ????? ? ???????
+                        ï¿½?????????ï¿½! ?? ??? ??????? ?????? ????, ??????? ????? ? ???????
                         ????????? ??? DJ Emergencyloop. 30% ???????? ???? ???????? ??
                         ????????? ???
                     </p>
-                    <button type="button" class="news-button">??????????»</button>
+                    <button type="button" class="news-button">??????????ï¿½</button>
                     <div class="card-line"></div>
                     <p class="date">14 ?????? 2025</p>
                 </div>
@@ -551,12 +551,12 @@
                     <div class="news-img-3"></div>
                     <h2 class="news-card-title">?????? ?? ?????</h2>
                     <p class="news-card-description">
-                        ?? 14 ?????? ? «?????????» ?????? ?????????? ????? «?????? ??
-                        ?????» ? ????????? ? CaféBoutique. ??? ??????? ????? ?????? ??
+                        ?? 14 ?????? ? ï¿½?????????ï¿½ ?????? ?????????? ????? ï¿½?????? ??
+                        ?????ï¿½ ? ????????? ? Cafï¿½Boutique. ??? ??????? ????? ?????? ??
                         ????????? FPV-???????????. ???????????? ?? ??????? ???? ?????? ?
                         ??????? ??????!
                     </p>
-                    <button type="button" class="news-button">??????????»</button>
+                    <button type="button" class="news-button">??????????ï¿½</button>
                     <div class="card-line"></div>
                     <p class="date">14 ?????? 2025</p>
                 </div>
@@ -582,7 +582,7 @@
                 ??? ????? ?????? ??????
             </p>
             <p class="reviews-subtitle-tablet">
-                ???? ??????? – ??? ???????? ?????????! ??????, ?????? ?? ????? – ??,
+                ???? ??????? ï¿½ ??? ???????? ?????????! ??????, ?????? ?? ????? ï¿½ ??,
                 ?? ?? ????????? ?????. ??????????? ?? ?????????? ????? ?????? ?
                 ???????????? ?? ????????? ??????????? ????????
             </p>
@@ -598,7 +598,7 @@
                         </div>
                     </div>
                     <p class="review-text">
-                        ?????? ????????? ?? ????????? – ? ?? ???? ???????? ???????!
+                        ?????? ????????? ?? ????????? ï¿½ ? ?? ???? ???????? ???????!
                         ??????? ???????? ??? ??? ?????????, ???????? ????????? ????????
                         ??????????, ? ????????? ?????? ??????! ????? ?? ??????????????!
                     </p>
@@ -630,7 +630,7 @@
                     </div>
                     <p class="review-text">
                         ?? ?????, ?? ??????? ??????? ???? ??????! ???????????? ????? ??
-                        ??????? – ??? ??????? ??????? ?? ???????????? ?? ???????. ?????? ?
+                        ??????? ï¿½ ??? ??????? ??????? ?? ???????????? ?? ???????. ?????? ?
                         ?????? ? ????????? ?????????! ?????????? ????!
                     </p>
                 </div>
@@ -649,13 +649,13 @@
             <h2 class="booking-title">?????????? ?????</h2>
             <p class="booking-subtitle">
                 ?????? ?? ????? ????????? ????? ?????????? ??'????, ??? ???????????
-                ?????, ??? ??’??????? ? ???? ??????? – ?? ?????????? ??????? ????
+                ?????, ??? ??ï¿½??????? ? ???? ??????? ï¿½ ?? ?????????? ??????? ????
                 ???????? ??????? ? ??????????!
             </p>
 
             <div class="booking-content">
                 <form class="booking-form">
-                    <h3 class="form-title">??????? ????????? ??’????</h3>
+                    <h3 class="form-title">??????? ????????? ??ï¿½????</h3>
 
                     <div class="form-field">
                         <label for="name" class="form-label">???? ?? ????????*</label>
