--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </p>
               <div class="language-switch">
                 <button class="lang-btn active" data-lang="ua">UA</button>
-                <button class="lang-btn" data-lang="en">EN</button>
+                <!-- <button class="lang-btn" data-lang="en">EN</button> -->
               </div>
               <nav class="mobile-nav">
                 <ul class="mobile-nav-list">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="footer-link-img-container">
                   <a
-                    href="https://www.instagram.com"
+                    href="https://www.instagram.com/valentyna_perukarnia/"
                     target="_blank"
                     class="footer-svg-link"
                   >
@@ -142,14 +142,14 @@
           <div class="nav-actions">
             <div class="language-switch">
               <button class="lang-btn active" data-lang="ua">UA</button>
-              <button class="lang-btn" data-lang="en">EN</button>
+              <!-- <button class="lang-btn" data-lang="en">EN</button> -->
             </div>
-            <button type="button" class="nav-button">
+            <!-- <button type="button" class="nav-button">
               <span>написати в Telegram</span>
               <svg class="icon">
                 <use href="#telegram"></use>
               </svg>
-            </button>
+            </button> -->
           </div>
         </div>
       </div>
@@ -161,7 +161,7 @@
             Будь собою. І нехай твоя зачіска говорить за тебе
           </h1>
           <div class="hero-buttons">
-            <a href="#booking" class="first-button">Записатися</a>
+            <a href="https://w.wlaunch.net/i/bf6cc32e-8bcc-11ef-9c30-2dc04baaba8b/b/bf6dd4b3-8bcc-11ef-9c30-2dc04baaba8b/r?fbclid=PAZXh0bgNhZW0CMTEAAadFHCiy5vG_ETSmy5YobeYYk5tcB3JX62x_sZFeJKvZ8pRhK-lD2s9BG4FkJQ_aem_Gz7k_zjCkIeDrJkB793_kw" target="_blank" class="first-button">Записатися</a>
             <a href="#services" class="second-button"> Перейти до послуг </a>
           </div>
         </div>
@@ -229,7 +229,7 @@
         </li>
       </ul>
 
-      <button type="button" class="services-btn">Записатися</button>
+      <button type="button" href="https://w.wlaunch.net/i/bf6cc32e-8bcc-11ef-9c30-2dc04baaba8b/b/bf6dd4b3-8bcc-11ef-9c30-2dc04baaba8b/r?fbclid=PAZXh0bgNhZW0CMTEAAadFHCiy5vG_ETSmy5YobeYYk5tcB3JX62x_sZFeJKvZ8pRhK-lD2s9BG4FkJQ_aem_Gz7k_zjCkIeDrJkB793_kw" target="_blank" class="services-btn">Записатися</button>
     </section>
 
     <section class="about" id="about">
@@ -348,7 +348,7 @@
         </div>
 
         <a
-          href="https://instagram.com"
+          href="https://www.instagram.com/valentyna_perukarnia/"
           class="gallery-link"
           target="_blank"
           rel="noopener noreferrer"
@@ -543,7 +543,7 @@
               </li>
               <li class="price-list-row">
                 <span class="service-name">Укладка 3го рівня</span>
-                <span class="service-price">1000-1500 грн</span>
+                <span class="service-price">Від 1500 грн</span>
               </li>
               <li class="price-list-row">
                 <span class="service-name">Догляд К18</span>
@@ -575,7 +575,7 @@
             </ul>
           </div>
         </div>
-        <a href="#booking" class="price-button">Записатися</a>
+        <a href="https://w.wlaunch.net/i/bf6cc32e-8bcc-11ef-9c30-2dc04baaba8b/b/bf6dd4b3-8bcc-11ef-9c30-2dc04baaba8b/r?fbclid=PAZXh0bgNhZW0CMTEAAadFHCiy5vG_ETSmy5YobeYYk5tcB3JX62x_sZFeJKvZ8pRhK-lD2s9BG4FkJQ_aem_Gz7k_zjCkIeDrJkB793_kw" target="_blank" class="price-button">Записатися</a>
       </div>
     </section>
 
@@ -662,7 +662,7 @@
             <div class="review-header">
               <img src="./img/avatar1.png" alt="Avatar" class="review-avatar" />
               <div class="review-info">
-                <p class="review-name">Valentyn Bandera</p>
+                <p class="review-name">Natalia Pushkarova</p>
                 <img src="./img/stars.png" alt="5 stars" class="review-stars" />
               </div>
             </div>
@@ -678,7 +678,7 @@
             <div class="review-header">
               <img src="./img/avatar2.png" alt="Avatar" class="review-avatar" />
               <div class="review-info">
-                <p class="review-name">Valentyn Bandera</p>
+                <p class="review-name">Ivan Legkyi</p>
                 <img src="./img/stars.png" alt="5 stars" class="review-stars" />
               </div>
             </div>
@@ -693,7 +693,7 @@
             <div class="review-header">
               <img src="./img/avatar3.png" alt="Avatar" class="review-avatar" />
               <div class="review-info">
-                <p class="review-name">Valentyn Bandera</p>
+                <p class="review-name">Kateryna Topolya</p>
                 <img src="./img/stars.png" alt="5 stars" class="review-stars" />
               </div>
             </div>
@@ -713,7 +713,7 @@
       </div>
     </section>
 
-    <section class="booking" id="booking">
+    <!-- <section class="booking" id="booking">
       <div class="booking-container">
         <h2 class="booking-title">ЗАБРОНЮЙТЕ ВІЗИТ</h2>
         <p class="booking-subtitle">
@@ -769,10 +769,10 @@
                   <a href="tel:+380989985522">+38(098)998-55-22</a>
                 </p>
               </div>
-            </div>
+            </div> -->
 
             <!-- ////////////// -->
-            <div class="contact-item">
+            <!-- <div class="contact-item">
               <div class="contact-item-img-container">
                 <svg class="contact-item-img">
                   <use href="#booking-email"></use>
@@ -784,10 +784,10 @@
                   <a href="mailto:valentyna@gmail.com">valentyna@gmail.com</a>
                 </p>
               </div>
-            </div>
+            </div> -->
 
             <!-- ////////////// -->
-            <div class="contact-item">
+            <!-- <div class="contact-item">
               <div class="contact-item-img-container">
                 <svg class="contact-item-img">
                   <use href="#booking-time"></use>
@@ -799,10 +799,10 @@
                   Пн-Пт 10:00 - 20:00 <br />Сб-Нд 11:00 - 18:00
                 </p>
               </div>
-            </div>
+            </div> -->
 
             <!-- ///////////////////////// -->
-            <div class="contact-item">
+            <!-- <div class="contact-item">
               <div class="contact-item-img-container width">
                 <svg class="contact-item-img">
                   <use href="#booking-location"></use>
@@ -818,7 +818,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
       <div class="footer-container">
@@ -876,7 +876,7 @@
                 </div>
                 <div class="footer-link-img-container">
                   <a
-                    href="https://www.instagram.com"
+                    href="https://www.instagram.com/valentyna_perukarnia/"
                     target="_blank"
                     class="footer-svg-link"
                   >
@@ -923,7 +923,7 @@
 
       <div class="footer-container-mobile">
         <a
-          href="https://www.google.com/maps/place/%D0%9F%D0%B5%D1%80%D1%83%D0%BA%D0%B0%D1%80%D0%BD%D1%8F+%D0%92%D0%B0%D0%BB%D0%B5%D0%BD%D1%82%D0%B8%D0%BD%D0%B0/@50.4485265,30.4995412,17z/data=!4m15!1m8!3m7!1s0x40d4cef5673e5901:0x8756a47ebbf37ec4!2z0LLRg9C70LjRhtGPINCR0L7Qs9C00LDQvdCwINCl0LzQtdC70YzQvdC40YbRjNC60L7Qs9C-LCA5NCwg0JrQuNGX0LIsINCj0LrRgNCw0ZfQvdCwLCAwMjAwMA!3b1!8m2!3d50.4485265!4d30.4995412!16s%2Fg%2F1tn4wpl4!3m5!1s0x40d4cf00101c2e53:0x2c700956045812cb!8m2!3d50.4485265!4d30.4995412!16s%2Fg%2F11x5hqg4g4?entry=ttu&g_ep=EgoyMDI1MDQyMy4wIKXMDSoASAFQAw%3D%3D"
+          href="https://maps.app.goo.gl/BBhDLBSZe6BwSAXX9"
           target="_blank"
         >
           <img
@@ -957,7 +957,7 @@
           </div>
           <div class="footer-link-img-container">
             <a
-              href="https://www.instagram.com"
+              href="https://www.instagram.com/valentyna_perukarnia/"
               target="_blank"
               class="footer-svg-link"
             >
