--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
               <button class="lang-btn active" data-lang="ua">UA</button>
               <!-- <button class="lang-btn" data-lang="en">EN</button> -->
             </div>
-            <!-- <button type="button" class="nav-button">
+            <button type="button" class="nav-button" href="https://t.me/valentyna_perukarnia">
               <span>написати в Telegram</span>
               <svg class="icon">
-                <use href="#telegram"></use>
+                <use href="https://t.me/valentyna_perukarnia" target="_blank"></use>
               </svg>
-            </button> -->
+            </button>
           </div>
         </div>
       </div>
@@ -887,7 +887,7 @@
                 </div>
                 <div class="footer-link-img-container">
                   <a
-                    href="https://web.telegram.org"
+                    href="https://t.me/valentyna_perukarnia"
                     target="_blank"
                     class="footer-svg-link"
                   >
@@ -968,7 +968,7 @@
           </div>
           <div class="footer-link-img-container">
             <a
-              href="https://web.telegram.org"
+              href="https://t.me/valentyna_perukarnia"
               target="_blank"
               class="footer-svg-link"
             >
